[gd_scene load_steps=7 format=2]

[ext_resource path="res://title_screen.png" type="Texture" id=1]
[ext_resource path="res://fonts/DroidSansFallback.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Results.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 51
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 51
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 120
outline_size = 4
outline_color = Color( 0.831373, 0.866667, 0.866667, 1 )
font_data = ExtResource( 2 )

[node name="Results" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.247059, 0.454902, 0.576471, 1 )
margin_right = 1027.0
margin_bottom = 644.0
texture = ExtResource( 1 )
expand = true

[node name="TimeLabel" type="Label" parent="."]
margin_left = 211.0
margin_top = 61.0
margin_right = 810.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "Time Left: XXX"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrbsLabel" type="Label" parent="."]
margin_left = 117.0
margin_top = 180.0
margin_right = 908.0
margin_bottom = 293.0
custom_fonts/font = SubResource( 2 )
text = "Orbs Collected: XXX/100"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryLabel" type="Label" parent="."]
visible = false
margin_left = 131.449
margin_top = 336.673
margin_right = 922.449
margin_bottom = 611.673
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0352941, 0.670588, 0.815686, 1 )
text = "VICTORY"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefeatLabel" type="Label" parent="."]
visible = false
margin_left = 131.449
margin_top = 336.673
margin_right = 922.449
margin_bottom = 611.673
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.815686, 0.12549, 0.0352941, 1 )
text = "DEFEAT"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 477.796
margin_top = 562.235
margin_right = 597.796
margin_bottom = 607.235
text = "Go back"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
